--- a/demo/index.html
+++ b/demo/index.html
@@ -3,48 +3,37 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Api.ai demo</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        .half-panel {
-            border: solid 1px gray;
-            min-height: 20px;
-            height: auto;
-            font-family: monospace;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
 </head>
 <body>
 
-See browser console for more details.
-<br/>
-<span id="server"></span>
-<br/>
-<span id="token"></span>
-<br/>
+<!-- See browser console for more details. -->
+<div class="mainCont">
+    <br/>
+    <span class ="server"id="server"></span>
+    <br/>
+    <span class ="token"id="token"></span>
+    <br/>
 
-<button type="button" onclick="app.open()">Open WebSocket</button>
-<button type="button" onclick="app.close()">Close WebSocket</button>
+    <button type="button" onclick="app.open()">Open WebSocket</button>
+    <button type="button" onclick="app.close()">Close WebSocket</button>
 
-<br/><br/>
+    <br/><br/>
 
-<button id="start" type="button" onclick="app.start()">Start</button>
-<button id="stop" type="button" onclick="app.stop()" class="hidden">Stop</button>
-or send json <input id="text" type="text"/>
-<button type="button" onclick="app.sendJson()">Send JSON</button>
+    <button id="start" type="button" onclick="app.start()">Start</button>
+    <button id="stop" type="button" onclick="app.stop()" class="hidden">Stop</button>
+    or send json <input id="text" type="text"/>
+    <button type="button" onclick="app.sendJson()">Send JSON</button>
 
-<br/><br/>
+    <br/><br/>
 
-<button id="clean" type="button" onclick="app.clean()">Clean dialogue</button>
+    <button id="clean" type="button" onclick="app.clean()">Clean dialogue</button>
+
+</div> <!-- end mainCont -->
+
+
+
+
 <div style="display: flex">
     <div id="dialogue" class="half-panel" style="white-space: pre-line;width: 50%"></div>
     <div id="response" class="half-panel" style="white-space: pre;width: 50%;"></div>
